# test_xquic

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile.dev  RunDevLinux.ps1  build.sh  build_android.bat
certificate/: cert-def.pem  key-def.pem
cmake/: FINDxquic.cmake  Findboringssl.cmake  Findeasyloggingpp.cmake
enc_temp_folder/38bdfbe752e02d92ad3a8420a5b963ad/: main.cpp
examples/custom_stream_cli/: CMakeLists.txt  main.cpp
examples/custom_stream_ser/: CMakeLists.txt  conf.txt  main.cpp
examples/pb_stream_cli/: CMakeLists.txt  conf.txt  main.cpp  say_hello.pb.h  say_hello.proto
examples/pb_stream_ser/: CMakeLists.txt  main.cpp  say_hello.pb.cc
examples/recv_datagram/: CMakeLists.txt  conf.txt  main.cpp
examples/recv_file/: CMakeLists.txt  conf.txt  main.cpp
examples/recv_test/: CMakeLists.txt  main.cpp
examples/send_datagram/: CMakeLists.txt  conf.txt  main.cpp
examples/send_file/: CMakeLists.txt  conf.txt  main.cpp
examples/send_test/: CMakeLists.txt  main.cpp
include/: platform.h
mqas/: CMakeLists.txt
mqas/include/: mqas.h
mqas/include/mqas/: context.h  log.h  macro.h
mqas/include/mqas/comm/: binary.hpp  macro.h  string.h
mqas/include/mqas/core/: connect.h  connect.impl.hpp  def.h  engine.h  engine.impl.hpp  engine_base.h  engine_base.impl.hpp  pb_stream.h  pb_stream.impl.hpp  protobuf_msg.h  protobuf_msg.impl.hpp  stream.h  stream.impl.hpp
mqas/include/mqas/core/proto/: gen_msg_wrapper.sh  msg_wrapper.pb.h  msg_wrapper.proto  simple.h  simple.impl.hpp
mqas/include/mqas/io/: context.h  exception.h  handle.h  idle.h  ip.h  timer.h  udp.h
mqas/include/mqas/tools/proto/: send_file.pb.h
mqas/include/mqas/tools/stream/: MsgDef.h  recv_file.h  send_file.h
mqas/proto/: gen_msg_wrapper.sh  gen_send_file.sh  msg_wrapper.proto  send_file.proto
mqas/src/: context.cpp  log.cpp
mqas/src/comm/: string.cpp
mqas/src/core/: connect.cpp  engine.cpp  engine_base.cpp  pb_stream.cpp  stream.cpp
mqas/src/core/proto/: msg_wrapper.pb.cc  simple.cpp
mqas/src/io/: context.cpp  exception.cpp  handle.cpp  idle.cpp  ip.cpp  timer.cpp  udp.cpp
mqas/src/tools/proto/: send_file.pb.cc
mqas/src/tools/stream/: recv_file.cpp  send_file.cpp
src/echo_client/: CMakeLists.txt  main.cpp
src/echo_ser/: CMakeLists.txt  main.cpp
src/test_client/: CMakeLists.txt  main.cpp
src/test_ser/: CMakeLists.txt  main.cpp
